k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
